# mcp-server

./: .gitignore  ARCHITECTURE.md  CALENDAR_SETUP.md  CLAUDE.md  MCP_CLIENTS.md  README.md  SECURITY.md
app/: .dockerignore  .env.example  .env.sample.py  .gitignore  Dockerfile  README.md  auth.py  chat_api.py  docker-compose.yaml  main.py  pyproject.toml
app/schemas/: temperature.py  weather.py
app/services/: temperature_calculation_service.py  weather_service.py
app/tests/: conftest.py  test_assistant.py  test_auth.py  test_calendar_google.py  test_calendar_outlook.py  test_chat_api.py  test_forecast.py  test_news.py  test_notes.py  test_reminders.py  test_tasks.py  test_temperature.py  test_timetracker.py  test_timezone.py  test_weather.py
app/tools/: __init__.py  prompts.py  resources.py  temperature.py  temperature_tools.py  timezone.py  weather_tools.py
app/tools/assistant/: __init__.py  schemas.py  service.py  tool.py
app/tools/calendar/: __init__.py  base.py  google_calendar.py  outlook_calendar.py  schemas.py  tool.py
app/tools/news/: __init__.py  schemas.py  service.py  tool.py
app/tools/notes/: __init__.py  schemas.py  service.py  tool.py
app/tools/reminders/: __init__.py  schemas.py  service.py  tool.py
app/tools/tasks/: __init__.py  schemas.py  service.py  tool.py
app/tools/timetracker/: __init__.py  schemas.py  service.py  tool.py
app/tools/weather/: __init__.py  schemas.py  service.py  tool.py
app/utils/: db.py  dotenv_config.py
frontend/: index.html
presentation/: MCP-Assistant-Presentation.html  MCP-Assistant-Presentation.pptx  (+2 more)
(+12 files in other folders)
