[project]
name = "app"
version = "0.1.0"
description = "MCP-server"
readme = "../README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.21.0",
    "google-api-python-client>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.13.1",
    "msal>=1.28.0",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-mock>=3.14.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
